2012-07-09  Eric Seidel  <eric@webkit.org>

        document.write of scripts that also document.write sometimes writes async
        https://bugs.webkit.org/show_bug.cgi?id=89102

        Reviewed by Adam Barth.

        * fast/parser/cached-script-document-write-expected.txt: Added.
        * fast/parser/cached-script-document-write.html: Added.
        * fast/parser/resources/cached-script-document-write.js: Added.

2012-07-09  Filip Pizlo  <fpizlo@apple.com>

        DFG may get stuck in an infinite fix point if it constant folds a mispredicted node
        https://bugs.webkit.org/show_bug.cgi?id=90829

        Reviewed by Oliver Hunt.

        * fast/js/dfg-constant-fold-misprediction-expected.txt: Added.
        * fast/js/dfg-constant-fold-misprediction.html: Added.
        * fast/js/script-tests/dfg-constant-fold-misprediction.js: Added.
        (foo):

2012-07-09  Filip Pizlo  <fpizlo@apple.com>

        fast/js/global-constructors.html is flaky and mostly useless
        https://bugs.webkit.org/show_bug.cgi?id=90833

        Unreviewed, skip flaky and useless test.

        * platform/mac/Skipped:

2012-07-09  Rafael Weinstein  <rafaelw@chromium.org>

        Unreviewed gardening. Marked webgl/glsl-conformance tests failing after dependency roll in chromium.

        * platform/chromium/TestExpectations:

2012-07-09  Vincent Scheib  <scheib@chromium.org>

        Refactor common Pointer Lock test code to a harness.
        https://bugs.webkit.org/show_bug.cgi?id=90813

        Reviewed by Adrienne Walker.

        * pointer-lock/bug90391-move-then-window-open-crash-expected.txt:
        * pointer-lock/bug90391-move-then-window-open-crash.html:
        * pointer-lock/lock-already-locked-expected.txt:
        * pointer-lock/lock-already-locked.html:
        * pointer-lock/lock-fail-responses-expected.txt:
        * pointer-lock/lock-fail-responses.html:
        * pointer-lock/mouse-event-delivery-expected.txt: