@@ -1,3 +1,15 @@
+2012-07-09  Vincent Scheib  <scheib@chromium.org>
+
+        Pointer Lock requestPointerLock rejects locking an element not in a document.
+        https://bugs.webkit.org/show_bug.cgi?id=90821
+
+        Reviewed by Adrienne Walker.
+
+        Test: pointer-lock/lock-element-not-in-dom.html
+
+        * page/PointerLockController.cpp:
+        (WebCore::PointerLockController::requestPointerLock):
+
 2012-07-09  Eric Seidel  <eric@webkit.org>
 
         document.write of scripts that also document.write sometimes writes async
